--- a/src/locales/gu.json
+++ b/src/locales/gu.json
@@ -1,10 +1,62 @@
 {
   "sections": {
     "home": {
-      "title": "Home"
+      "title": "Home",
+      "block": {
+        "birthday_heading": "આવનાર જન્મદિવસ",
+        "birthday_statement": "{name}, {date} {month} ({day}) ના રોજ {age} વર્ષ પુરા કરે છે.",
+        "news_heading": "સમાચાર",
+        "no_news": "... હાલ કોઈ સમાચાર નથી ..."
+      }
     },
     "friends": {
-      "title": "મિત્રો"
+      "title": "મિત્રો",
+      "filters": {
+        "sort": {
+          "caption": "ક્રમ મા",
+          "options": {
+            "surname": "અટક પ્રમાણે",
+            "name": "નામ પ્રમાણે",
+            "date_of_birth": "ઉમર પ્રમાણે",
+            "date_of_retirement": "નિવૃત્તિ તારીખ પ્રમાણે"
+          }
+        },
+        "city": {
+          "caption": "ગામ",
+          "options": {
+
+            "nil": "-- ગામની પસંદગી કરો --",
+            "rjt": "રાજકોટ",
+            "jam": "જામનગર",
+            "jun": "જૂનાગઢ",
+            "mrb": "મોરબી",
+            "gnd": "ગોંડલ",
+            "prb": "પોરબંદર",
+            "bhj": "ભુજ",
+            "gdm": "ગાંધીધામ",
+            "anj": "અંજાર",
+            "adp": "આદિપુર",
+            "mdr": "મુન્દ્રા",
+            "amr": "અમરેલી",
+            "bvn": "ભાવનગર",
+            "jtp": "જેતપુર",
+            "drj": "ધોરાજી",
+            "upl": "ઉપલેટા",
+            "ksd": "કેશોદ",
+            "vrv": "વેરાવળ",
+            "klv": "કાલાવાડ",
+            "drl": "ધ્રોલ",
+            "jdy": "જોડિયા",
+            "kby": "જામખંભાળીયા",
+            "dwk": "દ્વારકા",
+            "mdv": "માંડવી (કચ્છ)",
+            "sng": "સુરેન્દ્રનગર"
+          }
+        },
+        "search": {
+          "caption": "શોધ"
+        }
+      }
     },
     "activity": {
       "title": "પ્રવૃત્તિ"
@@ -19,9 +71,24 @@
       "title": "સંપર્ક"
     }
   },
+  "pagination": {
+    "pages": "પેજ દીઠ મિત્રોની સંખ્યા",
+    "gotopg": {
+      "notice": "પૃષ્ઠ ક્રમાંક આપો",
+      "error": "આપેલ પૃષ્ઠ ક્રમાંક અમાન્ય છે"
+    },
+    "next": "પછીનું",
+    "prev": "પહેલાનું",
+    "first": "પ્રથમ",
+    "last": "અંતિમ"
+  },
   "site": {
     "name": "મૈત્રીસંગાથ",
     "slogan": "નિવૃતોની મૈત્રીની નવી પરિભાષા."
+  },
+  "general": {
+    "months": ["જાન્યુઆરી", "ફેબ્રુઆરી", "માર્ચ", "એપ્રિલ", "મે", "જૂન", "જુલાઈ", "ઓગસ્ટ", "સપ્ટેમ્બર", "ઓક્ટોબર", "નવેમ્બર", "ડિસેમ્બર"],
+    "days": [ "રવિવાર", "સોમવાર", "મંગળવાર", "બુધવાર", "ગુરુવાર", "શુક્રવાર", "શનિવાર" ]
   },
   "lang": {
     "label": "ભાષા",
