--- a/src/locales/gu.json
+++ b/src/locales/gu.json
@@ -63,13 +63,39 @@
       "title": "પ્રવૃત્તિ"
     },
     "govrules": {
-      "title": "સરકારી નિયમો"
+      "title": "સરકારી નિયમો",
+      "no_description": "",
+      "show_pdf": "પી.ડી.એફ. દર્શાવો",
+      "download": "ડાઉનલોડ",
+      "link_caption": "વધુ માહિતી માટે મુલાકાત લો"
     },
     "articles": {
       "title": "લેખ"
     },
     "contact": {
-      "title": "સંપર્ક"
+      "title": "સંપર્ક",
+      "address": {
+        "label": "સરનામું",
+        "line1": "27-બી ભક્તિનગર, જી.આઈ.ડી.સી. મેઈનરોડ,",
+        "line2": "લાલજી મુળજી ટ્રાન્સપોર્ટની બાજુમાં,",
+        "line3": "સ્વરાજ લોજિસ્ટિકની સામે,",
+        "line4": "રાજકોટ, ગુજરાત - 360001"        
+      },
+      "admin": {
+        "label": "સંપર્ક",
+        "list": [{
+          "name": "વી. એન. હિરપરા",
+          "mobile": "+91-972-562-8986"
+        },
+        {
+          "name": "જે. ટી. ઠુમ્મર",
+          "mobile": "+91-903-320-7643"
+        },
+        {
+          "name": "ડી. આર. ઝાલા",
+          "mobile": "+91-942-642-9700"
+        }]
+      }
     }
   },
   "pagination": {
