--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -60,7 +60,8 @@
       }
     },
     "activity": {
-      "title": "activity"
+      "title": "Activity",
+      "showAlbum": "Show Album"
     },
     "govrules": {
       "title": "Gov. Rules",
